<resources>

    <string name="app_name">Library</string>

    <!-- MainActivity -->
    <string name="menu_all_books">List of books</string>
    <string name="menu_add_books">Add books</string>
    <string name="menu_log_out">Log out</string>
    <string name="menu_search_filter">Filter</string>
    <string name="menu_search_search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- NotesView -->
    <string name="notes">Notes</string>
    <string name="notes_counter">%d/%d</string>
    <string name="notes_notes_count">%d/256</string>

    <!-- DashboardFragment -->
    <string name="dashboard_fragment_no_books_added_yet">No books added yet</string>

    <!-- AddBooksFragment -->
    <string name="add_book_title">Title</string>
    <string name="add_book_image">Book image</string>
    <string name="add_book_description">Description</string>
    <string name="add_book_gender">Gender</string>
    <string name="add_book_gender_name">Name</string>
    <string name="add_book_author">Author</string>
    <string name="add_book_author_age">Age</string>
    <string name="add_book_author_nationality">Nationality</string>
    <string name="add_book_action_to_add">Add Book</string>

    <!-- BookGender -->
    <string name="add_book_gender_fab">Add new gender</string>
    <string name="add_book_gender_ok_dialog_button">ok</string>
    <string name="add_book_gender_cancel_dialog_button">cancel</string>
    <string name="add_book_gender_gender_name">Gender Name</string>
    <string name="add_book_gender_gender_updated">The gender was updated successfully.</string>
    <!-- GenderDialog -->

    <!-- Auth -->
    <string name="auth_login_error">Error trying to login</string>


</resources>
