<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/view_separator_top"
        style="@style/Divider"
        android:layout_marginTop="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/text_author_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_book_author"
        android:textSize="14sp"
        android:textColor="@color/slate_700"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/view_separator_top"/>

    <View
        android:id="@+id/view_separator_bottom"
        style="@style/Divider"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_author_label"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_inl_author_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="56dp"
        app:hintTextColor="@color/white"
        android:hint="@string/add_book_gender_name"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/view_separator_bottom" >


        <EditText
            android:id="@+id/edit_text_author_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/slate_000"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_inl_author_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="56dp"
        app:hintTextColor="@color/white"
        android:hint="@string/add_book_author_age"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/text_inl_author_name" >


        <EditText
            android:id="@+id/edit_text_author_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/slate_000"
            android:inputType="numberSigned"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_inl_author_nationality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="56dp"
        app:hintTextColor="@color/white"
        android:hint="@string/add_book_author_nationality"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/text_inl_author_age" >


        <EditText
            android:id="@+id/edit_text_author_nationality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/slate_000" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>