<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.add_books.AddBooksFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/checkout_discount_scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cb_add_book">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="32dp">

            <View
                android:id="@+id/view_separator_top"
                style="@style/Divider"
                android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_inl_book_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="56dp"
                app:hintTextColor="@color/white"
                android:hint="@string/add_book_title"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/view_separator_top" >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/slate_000"/>

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/view_separator_bottom"
                style="@style/Divider"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_inl_book_title"/>

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/client_photo"
                android:layout_width="180dp"
                android:layout_height="90dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/avatar_large"
                android:contentDescription="@string/add_book_image"
                app:riv_oval="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_separator_bottom"/>

            <com.example.library.ui.components.NotesView
                android:id="@+id/notes_book_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/client_photo"
                app:title="@string/add_book_description"
                tools:layout_editor_absoluteX="0dp" />

            <include
                android:id="@+id/cl_book_gender"
                layout="@layout/layout_book_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/notes_book_description"/>

            <include
                android:id="@+id/cl_book_author"
                layout="@layout/layout_book_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/cl_book_gender"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.example.library.ui.components.CustomButton
        android:id="@+id/cb_add_book"
        style="@style/Button.Primary.Keyboard"
        android:text="@string/add_book_action_to_add"
        app:style="keyboard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>